--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2991,7 +2991,7 @@ ul {
 }
 
 .bg-blu-fone {
-  display: none;
+  fill: #D7EEFC;
 }
 
 .active-mob .bg-blu {
@@ -3001,8 +3001,8 @@ ul {
 
 .active-mob .bg-blu-fone {
   display: block;
-  /* fill: #D7EEFC; */
-  fill: #000;
+  fill: #D7EEFC;
+  /* fill: #000; */
   animation-name: bg-blu;
   animation-duration: 0.9s;
 }
@@ -3031,12 +3031,14 @@ ul {
     transform: scale(1) translateX(0) translateY(0);
     width: 100%;
     height: 100%;
+
   }
 
   100% {
     transform: scale(1);
     width: 100%;
     height: 100%;
+    /* fill: #008000; */
   }
 }
 
