--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3007,6 +3007,34 @@ ul {
   animation-duration: 0.9s;
 }
 
+.bg-blu-fone.dis-act {
+  animation-name: dis-act;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in;
+  top: -50%;
+  left: -50%;
+  transform: scale(0.8);
+  opacity: 0;
+  fill: #D7EEFC;
+  /* fill: red; */
+}
+
+@keyframes dis-act {
+  0% {
+    opacity: 1;
+    transform: scale(1) translateX(0) translateY(0);
+  }
+
+  99% {
+    opacity: 1;
+    transform: scale(0.8) translateX(10%) translateY(10%);
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
 .active-mob .bg-blu-avt {
   animation-name: bg-blu-avt;
   animation-duration: 0.9s;
@@ -3038,7 +3066,6 @@ ul {
     transform: scale(1);
     width: 100%;
     height: 100%;
-    /* fill: #008000; */
   }
 }
 
