--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2352,13 +2352,13 @@ ul {
     margin-top: 0px !important;
   }
 
-  .conslting__active {
+  /* .conslting__active {
     display: block !important;
   }
 
   .conslting__none {
     display: none !important;
-  }
+  } */
 }
 
 @media (max-width: 767px) {
@@ -3317,3 +3317,29 @@ ul {
     opacity: 1;
   }
 }
+
+.trade-bg {
+  background-image: url(../img/bg/Vector-1.svg);
+  background-repeat: no-repeat;
+  width: 351.28px;
+  height: 299.6px;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 139px;
+}
+
+.trade-bg.act {
+  background-image: url(../img/bg/Vector.svg);
+  transition: all 0.4s ease-in;
+}
+
+/* .arr {
+  animation: arr 5s ease-in;
+}
+
+@keyframes arr {
+  100% {
+    d: path('M122 34.97C96 67.47 56.84 39.72 33.54 47.98C13.51 55.06 -4.04998 74.64 1.00001 97.08C6.72001 122.47 25.99 144.9 33.54 168.47C41.22 192.47 36.97 205.92 28.44 227.38C22.64 241.91 19.05 257.13 21.95 272.91C29.4 313.56 84.4 327.11 116.11 304.47C137.68 289.07 160.88 278.3 184.98 274.85C229.67 268.45 241.14 286.58 290.76 279.05C308.06 276.42 328.48 269.99 338.13 254.05C344.85 242.98 347.13 229.74 345.61 216.96C344.32 205.84 336.83 193.88 338.73 182.8C339.73 176.8 342.6 171.38 345.55 166.1C349.437 159.107 353.557 152.257 357.91 145.55C360.705 141.505 363.204 137.264 365.39 132.86C369.39 124.19 370.44 113.98 367.14 105.03C361.45 89.64 349.74 83.22 335.5 79.97C329.62 78.62 329.69 77.86 327 71.47C324.53 65.59 323.1 60.66 324 54.47C325.48 44.14 322.29 33.04 315.95 24.23C311.221 17.3546 304.916 11.7107 297.56 7.77C282.75 0 264.12 -1.67 248.31 4C236.734 8.18215 223.238 12.8355 214 20.97C188.5 24.23 174.54 16.24 155 20.97C134.5 25.9324 152.5 19.5 122 34.97Z');
+  }
+} */
